--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -55,9 +55,9 @@
         </div>
         <div>
           <table>
-            <tr><td>a</td><td>{{a}} m</td></tr>
-            <tr><td>b</td><td>{{b}} m</td></tr>
-            <tr><td>c</td><td>{{c}} m</td></tr>
+            <tr><td>&lambda;</td><td>{{lambda}} m</td></tr>
+            <tr><td>&mu;</td><td>{{mu}} m</td></tr>
+
         </div>
     </div>
 
@@ -77,6 +77,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
          <script src="scripts/angular.js"></script>
         <script src="scripts/app.js"></script>
+		 <script src="scripts/math.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="cordova.js"></script>
         <!-- endbuild -->
